Add production build configuration for www.bahar.co.il/scribe2/
- Configure Vite base path to /scribe2/ for production builds
- Add build:prod and preview:prod npm scripts
- Create comprehensive DEPLOYMENT.md guide
- Add DEPLOY_README.md with step-by-step upload instructions
- Include .htaccess for Apache server configuration
- Update .codeagent/current/deployment.md with current deployment info
- Add manual chunk splitting for better caching (React vendor separate)
- Build output: ~480KB + 28 drum samples
- Ready for manual deployment to production server

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "build:prod": "NODE_ENV=production npm run build",
     "preview": "vite preview",
+    "preview:prod": "NODE_ENV=production vite preview --port 4173",
     "lint": "eslint .",
     "type-check": "tsc --noEmit"
   },
