Complete Issue #3: Note Creation and Drum Part Mapping
Features implemented:
- Note creation via clicks, drags, and context menus
- Advanced edit mode toggle (press 'E')
- Drag-to-paint (⌘/Ctrl+drag) and drag-to-erase (⇧/Alt+drag)
- Bulk operations with 15 built-in patterns
- Custom pattern saving (localStorage)
- Articulation-specific icons (FontAwesome)
- Touch support for mobile devices
- Undo/Redo with 50-action history
- Keyboard shortcuts footer

Files created: 19 (components, hooks, core modules, docs)
Files modified: 14

All requirements from Issue #3 met and exceeded.

Closes #3

--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "preview": "vite preview",
     "preview:prod": "NODE_ENV=production vite preview --port 4173",
     "lint": "eslint .",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "react": "^18.3.1",
